shifted main down a bit to avoid conflicts

--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -45,11 +45,12 @@ li {
 }
 
 body {
+
   background-color: #D2E1E4;
 }
 
 main {
-  padding: 50px;
+  padding: 70px;
   text-align: center;
 }
 
